# TalkMateAI

apps/client/: next.config.ts
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: .env.example  app.py  pyproject.toml  run.sh  settings.py  test_tts.py
