[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talkmateai-server"
version = "0.1.0"
description = "TalkMateAI server application"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "openai==2.7.1",
  "httpx>=0.25.0",
  "python-multipart>=0.0.6",
  "black>=25.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["hf*", "received_images*"]
